# EFS-Driving-Stack-Carla

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json  env
configs/ackermann_control/: settings.yaml
configs/scenarios/: follow_forever.json  follow_route.json
scripts/: get_host_ip_address.sh  get_windows_host.sh  import pygame.py  initialize_commands.sh  post_start_commands.sh  symlink_ackermann_config.sh
scripts/carla/: boundary_data.json  dashboard.py  destroy_all_vehicle_and_sensors.py  move_to_actor.py  print_spawn_points.py  reset_scenario.py  test.py
src/carla_efs_api/: package.xml  setup.cfg  setup.py
src/carla_efs_messages/: CMakeLists.txt  package.xml
src/carla_efs_planner/: package.xml  setup.cfg  setup.py
src/carla_efs_spawner/: package.xml  setup.cfg  setup.py
src/carla_efs_spawner/carla_efs_spawner/: carla_efs_spawner.py
src/carla_efs_spawner/launch/: carla_efs_spawner.launch  carla_efs_spawner.launch.py
src/carla_efs_vehicle_control/: package.xml  setup.cfg  setup.py
src/carla_efs_vehicle_control/carla_efs_vehicle_control/: simple_mpc.py  vehicle_control_interface.py  vehicle_interface.py
src/carla_efs_vehicle_control/launch/: simple_mpc.launch  simple_mpc.launch.py  vehicle_control_interface.launch  vehicle_control_interface.launch.py
src/carla_efs_vehicle_control_interface/: package.xml  setup.cfg  setup.py
src/carla_monitor/: package.xml  setup.cfg  setup.py
src/controller/: package.xml  setup.py
src/dashboard/: package.xml  setup.cfg  setup.py
src/messages/: CMakeLists.txt  package.xml
src/planner/: package.xml  (+1 more)
(+43 files in other folders)
